<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="current_quantity_hint">Current Quantity:</string>
    <string name="price_hint">Price:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="make_sale">Make Sale</string>
    <string name="update">Update</string>
    <string name="add_item">Add Item</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_successful">Purchase Successful!</string>
    <string name="purchase_error">Error! Can\'t make purchase with no items!</string>
    <string name="zero_quantity">Error! Quantity for product is zero!</string>
    <string name="sale_successful">Sale Successful!</string>
    <string name="error_sale">Error! Can\'t make sale with no items!</string>
    <string name="delete_supplier_title">Delete this Supplier?</string>
    <string name="delete_message_supplier">Warning! this may cause problems with Items from this Supplier!</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="no_suppliers_hint">Nothing to show.\nAdd a Supplier to get started</string>
    <string name="no_contact_info_error">No Contact info found!</string>
    <string name="error_negative_quantity">Error! can\'t have negative quantity</string>
    <string name="delete_item">Delete this Item?</string>
    <string name="items_list">Items List</string>
    <string name="no_items_hint">Nothing to show.\nStart by adding a supplier and then add Items.</string>
    <string name="suppliers_list">Supplier List</string>
    <string name="items_in_stock">Items in Stock</string>
    <string name="suppliers">Suppliers</string>
    <string name="delete_this">Delete this</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all">Delete all</string>
    <string name="toggle">Toggle</string>
    <string name="new_sales">New Sales</string>
    <string name="new_purchase">New Purchase</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="google_abc_xyz">google@abc.xyz</string>
    <string name="phone">Phone:</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="supplier">Supplier</string>
    <string name="add_image">Add Image</string>
    <string name="order_more">Order More</string>
    <string name="add">Add</string>
</resources>
