<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="xyz.cybersapien.inventorymanager.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_list_height"
        android:text="@string/items_list"
        style="@style/MainActivityListStyle"
        android:id="@+id/items_list_option"
        android:onClick="onClickListener"
        android:background="@color/colorItems"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_list_height"
        style="@style/MainActivityListStyle"
        android:id="@+id/suppliers_list_option"
        android:text="@string/suppliers_list"
        android:onClick="onClickListener"
        android:background="@color/colorSuppliers"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_list_height"
        style="@style/MainActivityListStyle"
        android:id="@+id/add_sale_option"
        android:text="@string/new_sales"
        android:onClick="onClickListener"
        android:background="@color/colorSales"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_list_height"
        style="@style/MainActivityListStyle"
        android:id="@+id/add_purchase_option"
        android:text="@string/new_purchase"
        android:onClick="onClickListener"
        android:background="@color/colorPurchase"/>

</LinearLayout>
