<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:id="@+id/activity_new_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="xyz.cybersapien.inventorymanager.ItemEditorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:minEms="5"
                android:maxEms="5"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="0dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:inputType="text"
                android:hint="@string/name"
                android:layout_weight="0.94"
                android:layout_height="wrap_content"
                android:id="@+id/item_name_edit_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:minEms="5"
                android:maxEms="5"
                android:textSize="18sp"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_angle_left"
                android:id="@+id/modifier_remove"/>

            <TextView
                android:layout_width="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/item_quantity_text_view"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_angle_right"
                android:id="@+id/modifier_add"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:minEms="5"
                android:maxEms="5"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:hint="@string/price"
                android:layout_height="wrap_content"
                android:id="@+id/item_price_edit_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier"
                android:minEms="5"
                android:maxEms="5"
                android:textSize="16sp"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:id="@+id/suppliers_spinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/placeholder"
                android:id="@+id/item_image_view"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/add_image"
                android:id="@+id/take_image_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/order_button"
                android:text="@string/order_more"
                />

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0dp" />

            <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/submit_button" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>
